fix color and z-index toast

--- a/toast.css
+++ b/toast.css
@@ -1,23 +1,18 @@
 :root {
-  --dark: #34495e;
   --light: #ffffff;
-  --success: #0abf30;
-  --error: #e24d4c;
-  --warning: #e9bd0c;
-  --info: #3498db;
+  --success: #2bc48a;
 }
 #notifications-copy {
   position: fixed !important;
   top: 30px;
   right: 20px;
   z-index: 999 !important;
-  background-color: green;
 }
-#notifications-copy :where(.toast, .column) {
+#notifications-copy :where(.natifactions-toast) {
   display: flex;
   align-items: center;
 }
-.notifications .toast {
+.natifactions-toast {
   width: 400px;
   position: relative;
   overflow: hidden;
@@ -28,6 +23,8 @@
   background: var(--light);
   justify-content: space-between;
   animation: show_toast 0.3s ease forwards;
+  align-items: center;
+  float: right;
 }
 @keyframes show_toast {
   0% {
@@ -43,7 +40,7 @@
     transform: translateX(-10px);
   }
 }
-.notifications .toast.hide {
+#notifications-copy .natifactions-toast.hide {
   animation: hide_toast 0.3s ease forwards;
 }
 @keyframes hide_toast {
@@ -60,7 +57,7 @@
     transform: translateX(calc(100% + 20px));
   }
 }
-.toast::before {
+.natifactions-toast::before {
   position: absolute;
   content: "";
   height: 3px;
@@ -69,76 +66,41 @@
   left: 0px;
   animation: progress 5s linear forwards;
 }
+
+.content-toast {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.content-toast i {
+  background-color: var(--success);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 11px;
+  border-radius: 50px;
+  color: var(--light);
+  font-size: 13px;
+}
+
 @keyframes progress {
   100% {
     width: 0%;
   }
 }
-.toast.success::before,
+.success::before,
 .btn#success {
   background: var(--success);
 }
-.toast.error::before,
-.btn#error {
-  background: var(--error);
-}
-.toast.warning::before,
-.btn#warning {
-  background: var(--warning);
-}
-.toast.info::before,
-.btn#info {
-  background: var(--info);
-}
-.toast .column i {
-  font-size: 1.75rem;
-}
-.toast.success .column i {
-  color: var(--success);
-}
-.toast.error .column i {
-  color: var(--error);
-}
-.toast.warning .column i {
-  color: var(--warning);
-}
-.toast.info .column i {
-  color: var(--info);
-}
-.toast .column span {
-  font-size: 1.07rem;
-  margin-left: 12px;
-}
-.toast i:last-child {
-  color: #aeb0d7;
-  cursor: pointer;
-}
-.toast i:last-child:hover {
-  color: var(--dark);
-}
-.btn {
-  border: none;
-  outline: none;
-  cursor: pointer;
-  margin: 0 5px;
-  color: var(--light);
-  font-size: 1.2rem;
-  padding: 10px 20px;
-  border-radius: 4px;
-}
 
 @media screen and (max-width: 530px) {
-  .notifications {
+  #notifications-copy {
     width: 95%;
   }
-  .notifications .toast {
+  #notifications-copy .natifactions-toast {
     width: 100%;
     font-size: 1rem;
     margin-left: 20px;
-  }
-  .btn {
-    margin: 0 1px;
-    font-size: 1.1rem;
-    padding: 8px 15px;
   }
 }
